kubernetes/apps/changedetection/changedetection/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: changedetection
  namespace: changedetection
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - changedetection.blackcats.cc
  rules:
    - backendRefs:
        - name: changedetection
          port: 5000
